# imxrt-dcp

./: .gitignore  Cargo.toml  README.md  checklist.md
src/: channels.rs  dcp.rs  ex.rs  lib.rs  ops.rs  task.rs
src/channels/: mod.rs
src/dcp/: mod.rs
src/ex/: mod.rs
src/ops/: config.rs  mod.rs
src/packet/: builder.rs  mod.rs  raw.rs
teensy40-examples/: Cargo.toml
teensy40-examples/src/: copy.rs  hash.rs  logging.rs
