[package]
name = "imxrt-dcp"
description = "Driver for the i.MX RT Data Co-Processor (dcp)"
repository = "https://github.com/techmccat/imxrt-dcp"
readme = "README.md"
keywords = ["imxrt", "dcp", "nxp", "embedded", "no_std"]
categories = ["embedded", "no_std", "cryptography", "hardware-support"]
version = "0.1.0"
edition = "2018"

[dependencies]
bitvec = { version = "0.20", default-features = false }
nb = "1.0"
log = "0.4"

[dependencies.imxrt-ral]
version = "0.4"
features = ["imxrt1062"]
